# ptx

./: CMakeLists.txt  compiler.cu  compiler.cuh  cuda.cubin  cuda.ptx  gpuHelpers.cuh  kernel.ptx  kernels.cuh  kernels.ptx  kernels_deniz.ptx  kernels_nvcc.ptx  main.cu  run.sh  todo.txt
